chore #1: Modify config

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=secret
+# SENDGRID_API_KEY=set in .env.local
+# SENDGRID_DOMAIN=set in .env.local
+# POSTGRES_USER=set in .env.local
+# POSTGRES_PASSWORD=secret=set in .env.local
 
 RAILS_ENV=development
 RAILS_MAX_THREADS=5
+
