--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # SENDGRID_API_KEY=set in .env.local
 # SENDGRID_DOMAIN=set in .env.local
-# POSTGRES_USER=set in .env.local
-# POSTGRES_PASSWORD=secret=set in .env.local
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=secret
 
 RAILS_ENV=development
 RAILS_MAX_THREADS=5
