feat #4: User edit by admin role

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -51,6 +51,7 @@ Style/OpenStructUse:
   Enabled: false
 
 Metrics/BlockLength:
+  IgnoredMethods: ["describe", "context"]
   Exclude:
     - 'Rakefile'
     - '**/*.rake'
