--- a/.env
+++ b/.env
@@ -1,5 +1,15 @@
+# This is the secret sendgrid API key which was issued during API key creation
+# SENDGRID_API_KEY=set in .env.local
+
+# Your e-mail which is set as Sender Identity in SendGrid
+# SENDGRID_SENDER_IDENTITY_EMAIL=set in .env.local
+
+# Your e-mail domain from SendGrid Sender Identity ie. selleo.com
+# SENDGRID_DOMAIN=set in .env.local
+
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=secret
 
 RAILS_ENV=development
 RAILS_MAX_THREADS=5
+
