--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,13 @@ services:
     volumes:
       - dev_path_app_db:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: secret
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "secret"
+  mail:
+    image: schickling/mailcatcher
+    ports:
+      - "1025:1025"
+      - "1080:1080"
   
 volumes:
     dev_path_app_db:
