feat #15: Add endpoint for user posts with api-key
authentication

--- a/.env
+++ b/.env
@@ -7,6 +7,10 @@
 # Your e-mail domain from SendGrid Sender Identity ie. selleo.com
 # SENDGRID_DOMAIN=set in .env.local
 
+# Master key for lockbox: 
+# generate it with `Lockbox.generate_key` in rails console
+# LOCKBOX_MASTER_KEY=set in .env.local
+
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=secret
 
