feat #17: Add user feed export

--- a/.env
+++ b/.env
@@ -11,9 +11,14 @@
 # generate it with `Lockbox.generate_key` in rails console
 # LOCKBOX_MASTER_KEY=set in .env.local
 
+# To access sidekiq set those in .env.local
+# DEV_USERNAME
+# DEV_PASSWORD
+
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=secret
 
 RAILS_ENV=development
 RAILS_MAX_THREADS=5
 
+REDIS_URL_SIDEKIQ=redis://localhost:6379
